Change ssm parameter

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -80,12 +80,29 @@ jobs:
       SkipPasswordRotation: ${{ steps.checkduplicaterunning.outputs.SkipPasswordRotation }}
     steps:
 
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
       - name: Check Duplicate Job Running
         id: checkduplicaterunning
         shell: bash
         run: |
-          DUPLICATE_JOBS_STATUS=$(aws ssm get-parameters --region ${AWS_REGION} --names "/oracle/duplicate/mis_primarydb/status" "/oracle/duplicate/delius_primarydb/status" | jq -r '.Parameters[] | select(.Value=="Started") | .Value' | uniq)
-          if [[ "${DUPLICATE_JOBS_STATUS}" == "Started" ]]
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
+          then
+            TargetEnvironment="echo ${{ github.event.inputs.TargetEnvironment }}"
+          elif [[ "${{ github.event_name }}" == "schedule" ]]
+          then
+            TargetEnvironment="${{ inputs.TargetEnvironment }}"
+          fi
+          TargetEnvironment=environment_name_$(echo ${TargetEnvironment} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/preprod/preproduction_preprod/;s/-/_/g')
+          DUPLICATE_JOBS_STATUS=$(aws ssm get-parameters --region eu-west-2 --names "/oracle-duplicate/${TargetEnvironment}_delius_primarydb" "/oracle-duplicate/${TargetEnvironment}_mis_primarydb" |  jq -r '.Parameters[].Value' | jq -r '.Phase' | uniq)
+
+          if [[ "${DUPLICATE_JOBS_STATUS}" == "Duplicate Started" ]]
           then
             echo "SkipPasswordRotation=yes" >> $GITHUB_OUTPUT
           fi
@@ -224,7 +241,7 @@ jobs:
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
           $database_command -i $inventory ${{ steps.definetargets.outputs.IncludeSsmBucket }} \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
-          -e environment_name=${{ github.event.inputs.TargetEnvironment }} ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
+          -e environment_name=${TargetEnvironment} ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
 
   oracle_update_oem_targets:
     name: oracle-update-oem-targets
