--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -101,11 +101,13 @@ jobs:
           fi
           TargetEnvironment=environment_name_$(echo ${TargetEnvironment} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/preprod/preproduction_preprod/;s/-/_/g')
           DUPLICATE_JOBS_STATUS=$(aws ssm get-parameters --region eu-west-2 --names "/oracle-duplicate/${TargetEnvironment}_delius_primarydb" "/oracle-duplicate/${TargetEnvironment}_mis_primarydb" |  jq -r '.Parameters[].Value' | jq -r '.Phase' | uniq)
-
+          echo ${DUPLICATE_JOBS_STATUS}
           if [[ "${DUPLICATE_JOBS_STATUS}" == "Duplicate Started" ]]
           then
             echo "SkipPasswordRotation=yes" >> $GITHUB_OUTPUT
           fi
+
+          echo ${SkipPasswordRotation}
 
   oracle_password_rotation:
     if: ${{ needs.oracle_duplicate_in_progress.outputs.SkipPasswordRotation != 'yes' }}
