--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -94,7 +94,7 @@ jobs:
         run: |
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
           then
-            TargetEnvironment="echo ${{ github.event.inputs.TargetEnvironment }}"
+            TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
           elif [[ "${{ github.event_name }}" == "schedule" ]]
           then
             TargetEnvironment="${{ inputs.TargetEnvironment }}"
@@ -106,7 +106,6 @@ jobs:
           then
             echo "SkipPasswordRotation=yes" >> $GITHUB_OUTPUT
           fi
-
           echo ${SkipPasswordRotation}
 
   oracle_password_rotation:
