--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -68,9 +68,48 @@ permissions:
   packages: read
   id-token: write
 
-jobs:          
+jobs:
+  oracle_duplicate_in_progress:
+    name: oracle-duplicate-in-progress
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+    continue-on-error: false
+    outputs:
+      SkipPasswordRotation: ${{ steps.checkduplicaterunning.outputs.SkipPasswordRotation }}
+    steps:
+
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
+      - name: Check Duplicate Job Running
+        id: checkduplicaterunning
+        shell: bash
+        run: |
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
+          then
+            TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
+          elif [[ "${{ github.event_name }}" == "schedule" ]]
+          then
+            TargetEnvironment="${{ inputs.TargetEnvironment }}"
+          fi
+          TargetEnvironment=environment_name_$(echo ${TargetEnvironment} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/preprod/preproduction_preprod/;s/-/_/g')
+          DUPLICATE_JOBS_STATUS=$(aws ssm get-parameters --region eu-west-2 --names "/oracle-duplicate/${TargetEnvironment}_delius_primarydb" "/oracle-duplicate/${TargetEnvironment}_mis_primarydb" |  jq -r '.Parameters[].Value' | jq -r '.Phase' | uniq)
+          if [[ "${DUPLICATE_JOBS_STATUS}" == "Duplicate Started" ]]
+          then
+            echo "SkipPasswordRotation=yes" >> $GITHUB_OUTPUT
+          fi
+
   oracle_password_rotation:
+    if: ${{ needs.oracle_duplicate_in_progress.outputs.SkipPasswordRotation != 'yes' }}
     name: oracle-password-rotation
+    needs: oracle_duplicate_in_progress
     environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
@@ -95,7 +134,7 @@ jobs:
             playbooks/alfresco_wallet
             playbooks/ansible.cfg
           path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
 
       - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
@@ -107,7 +146,7 @@ jobs:
             ansible/hosts
             ansible/group_vars
           path: inventory
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
       - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
@@ -119,7 +158,7 @@ jobs:
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-modernisation-platform-facts
           path: roles
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
       - name: Define Targets
@@ -127,11 +166,19 @@ jobs:
         working-directory: ${{ env.inventory }}
         run: |
           targets=""
-          if [[ ! "${{ github.event.inputs.TargetEnvironment }}" =~ oem ]]
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
           then
-            prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
+            TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
+          elif [[ "${{ github.event_name }}" == "schedule" ]]
+          then
+            TargetEnvironment="${{ inputs.TargetEnvironment }}"
+          fi
+
+          if [[ ! "${TargetEnvironment}" =~ oem ]]
+          then
+            prefix="environment_name_$(echo ${TargetEnvironment} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
           else
-            prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/-/_/g')"
+            prefix="environment_name_$(echo ${TargetEnvironment} | sed 's/-/_/g')"
           fi
           build_target() {
             databasetype=${1}
@@ -145,8 +192,8 @@ jobs:
             echo
           }
           
-          ApplicationType=$(echo ${{ github.event.inputs.TargetEnvironment }} | cut -d- -f1-2)
-          Environment=$(echo ${{ github.event.inputs.TargetEnvironment }} | cut -d- -f3)
+          ApplicationType=$(echo ${TargetEnvironment} | cut -d- -f1-2)
+          Environment=$(echo ${TargetEnvironment} | cut -d- -f3)
 
           if [[ "${ApplicationType}" == "delius-core" ]]
           then
@@ -169,14 +216,13 @@ jobs:
             TargetOemEnvironment=hmpps-oem-${OemEnvironment}
             IncludeSsmBucket="-e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}" 
           else
-            TargetOemEnvironment=${{ github.event.inputs.TargetEnvironment }}
+            TargetOemEnvironment=${TargetEnvironment}
             IncludeSsmBucket=""
           fi
 
-
           echo "targets=$targets" >> $GITHUB_OUTPUT
           echo "TargetOemEnvironment=${TargetOemEnvironment}" >> $GITHUB_OUTPUT
-          echo "TargetEnvironmentName=${{ github.event.inputs.TargetEnvironment }}" >> $GITHUB_OUTPUT
+          echo "TargetEnvironmentName=${TargetEnvironment}" >> $GITHUB_OUTPUT
           echo "IncludeSsmBucket=${IncludeSsmBucket}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
@@ -194,7 +240,7 @@ jobs:
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
           $database_command -i $inventory ${{ steps.definetargets.outputs.IncludeSsmBucket }} \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
-          -e environment_name=${{ github.event.inputs.TargetEnvironment }} ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
+          -e environment_name=${TargetEnvironment} ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
 
   oracle_update_oem_targets:
     name: oracle-update-oem-targets
@@ -215,7 +261,7 @@ jobs:
             playbooks/oracle_password_rotation
             playbooks/ansible.cfg
           path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
 
       - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
@@ -227,7 +273,7 @@ jobs:
             ansible/hosts
             ansible/group_vars
           path: inventory
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
       - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
@@ -239,7 +285,7 @@ jobs:
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-modernisation-platform-facts
           path: roles
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
       - name: Configure AWS Credentials
@@ -282,7 +328,7 @@ jobs:
             playbooks/oracle_password_rotation
             playbooks/ansible.cfg
           path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
 
       - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
@@ -294,7 +340,7 @@ jobs:
             ansible/hosts
             ansible/group_vars
           path: inventory
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
       - name: Configure AWS Credentials
