--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -87,6 +87,8 @@
     secret_name: "{{ build_secret_name.stdout }}"
   #when: database_primary_sid is defined
 
+- debug: var=build_secret_name
+
 #  The rest of this play is in a block so we can re-enable monitoring even if it fails
 - name: Rotate Passwords
   when: unlock_system_passwords is not defined
