Reference correct environment name

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -240,7 +240,7 @@ jobs:
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
           $database_command -i $inventory ${{ steps.definetargets.outputs.IncludeSsmBucket }} \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
-          -e environment_name=${TargetEnvironment} ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
+          -e environment_name=${{ steps.definetargets.outputs.TargetEnvironmentName }} ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
 
   oracle_update_oem_targets:
     name: oracle-update-oem-targets
