Runs-on missing

--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -104,6 +104,7 @@ permissions:
 
 jobs: 
   oracle-oem-password-preparation:
+    runs-on: ubuntu-latest
     continue-on-error: false
     outputs:
       TargetOemEnvironment: ${{ steps.prepare.outputs.TargetOemEnvironment }}
