--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -268,7 +268,7 @@ jobs:
         id: slack
         uses: slackapi/slack-github-action@v1.26.0
         with:
-            channel-id: ${{ needs.oracle-oem-password-preparation.outputs.SlackChannel }}"
+            channel-id: ${{ needs.oracle-oem-password-preparation.outputs.SlackChannel }}
             payload: |
               { 
                 "icon_emoji":"large_purple_circle",
