--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -213,16 +213,15 @@ jobs:
       - name: Start Ansible OEM Password Rotation
         shell: bash
         run: |
-          exit 1
-          # export ANSIBLE_CONFIG=$ansible_config
-          # ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          # $command -i $inventory \
-          # -e oem_target=${{ needs.oracle-oem-password-preparation.outputs.TargetOemHost }} \
-          # -e environment_name=${{ needs.oracle-oem-password-preparation.outputs.TargetEnvironmentName }}  \
-          # -e target_environment_name=${{ needs.oracle-oem-password-preparation.outputs.TargetEnvironmentName }} \
-          # -e sync_monitoring_passwords=${{ needs.oracle-oem-password-preparation.outputs.SyncMonitoringPasswords }} \
-          # -e rotate_rman_password=${{ needs.oracle-oem-password-preparation.outputs.RotateRMANPassword }} \
-          # -e rotate_oem_passwords=${{ needs.oracle-oem-password-preparation.outputs.RotateOEMPasswords }} ${{ needs.oracle-oem-password-preparation.outputs.VerboseOutput }}
+          export ANSIBLE_CONFIG=$ansible_config
+          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
+          $command -i $inventory \
+          -e oem_target=${{ needs.oracle-oem-password-preparation.outputs.TargetOemHost }} \
+          -e environment_name=${{ needs.oracle-oem-password-preparation.outputs.TargetEnvironmentName }}  \
+          -e target_environment_name=${{ needs.oracle-oem-password-preparation.outputs.TargetEnvironmentName }} \
+          -e sync_monitoring_passwords=${{ needs.oracle-oem-password-preparation.outputs.SyncMonitoringPasswords }} \
+          -e rotate_rman_password=${{ needs.oracle-oem-password-preparation.outputs.RotateRMANPassword }} \
+          -e rotate_oem_passwords=${{ needs.oracle-oem-password-preparation.outputs.RotateOEMPasswords }} ${{ needs.oracle-oem-password-preparation.outputs.VerboseOutput }}
 
   slack-notification:
     if: ${{ failure() }}
