--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -102,22 +102,28 @@ permissions:
   packages: read
   id-token: write
 
-jobs:          
-  deployment:
-    name: oracle-oem-password-rotation
-    environment: ${{ github.event.inputs.TargetOemEnvironment }}-preapproved
+jobs: 
+  oracle-oem-password-preparation:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
-    timeout-minutes: 1440
     continue-on-error: false
+    outputs:
+      TargetOemEnvironment: ${{ steps.prepare.outputs.TargetOemEnvironment }}
+      TargetOemHost: ${{ steps.prepare.outputs.TargetOemHost }}
+      TargetEnvironmentName: ${{ steps.prepare.outputs.TargetEnvironmentName }}
+      SyncMonitoringPasswords: ${{ steps.prepare.outputs.SyncMonitoringPasswords }}
+      RotateRMANPassword: ${{ steps.prepare.outputs.RotateRMANPassword }}
+      RotateOEMPasswords: ${{ steps.prepare.outputs.RotateOEMPasswords }}
+      VerboseOutput: ${{ steps.prepare.outputs.VerboseOutput }}
+      SlackChannel: ${{ steps.prepare.outputs.SlackChannel }}
+      JobId: ${{ github.job }}
     steps:
 
-      - name: Prepare Ansbile OEM Target Host
-        id: prepareoemtargethost
+      - name: Prepare Ansbile OEM Target Host And Slack Channel
+        id: prepare
         run: |
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
           then
+            TargetOemEnvironment="${{ github.event.inputs.TargetOemEnvironment }}"
             TargetOemHost="environment_name_$(echo ${{ github.event.inputs.TargetOemEnvironment }}  | sed 's/-/_/g')"
             TargetEnvironmentName="${{ github.event.inputs.TargetEnvironmentName }}"
             SyncMonitoringPasswords="${{ github.event.inputs.SyncMonitoringPasswords }}"
@@ -126,6 +132,7 @@ jobs:
             VerboseOutput="${{ github.event.inputs.VerboseOutput }}"
           elif [[ "${{ github.event_name }}" == "schedule" ]]
           then
+            TargetOemEnvironment="${{ inputs.TargetOemEnvironment }}"
             TargetOemHost=="environment_name_$(echo ${{ inputs.TargetOemEnvironment }}  | sed 's/-/_/g')"
             TargetEnvironmentName="${{ inputs.TargetEnvironmentName }}"
             SyncMonitoringPasswords="${{ inputs.SyncMonitoringPasswords }}"
@@ -133,12 +140,32 @@ jobs:
             RotateOEMPasswords="${{ inputs.RotateOEMPasswords }}"
             VerboseOutput=""
           fi
+          echo "TargetOemEnvironment=${TargetOemEnvironment}" >> $GITHUB_OUTPUT
           echo "TargetOemHost=${TargetOemHost}" >> $GITHUB_OUTPUT
           echo "TargetEnvironmentName=${TargetEnvironmentName}" >> $GITHUB_OUTPUT
           echo "SyncMonitoringPasswords=${SyncMonitoringPasswords}" >> $GITHUB_OUTPUT
           echo "RotateRMANPassword=${RotateRMANPassword}" >> $GITHUB_OUTPUT
           echo "RotateOEMPasswords=${RotateOEMPasswords}" >> $GITHUB_OUTPUT
           echo "VerboseOutput=${VerboseOutput}" >> $GITHUB_OUTPUT
+
+          Environment=$(echo ${TargetOemHost} | rev | cut -d'_' -f1 | rev)
+          if [[ "${Environment}" == "production" ]]; then
+            echo "SlackChannel=delius-aws-oracle-prod-alerts" >> $GITHUB_OUTPUT
+          else
+            echo "SlackChannel=delius-aws-oracle-dev-alerts" >> $GITHUB_OUTPUT
+          fi
+
+  oracle-oem-password-rotation:
+    needs: oracle-oem-password-preparation
+    environment: ${{ needs.oracle-oem-password-preparation.outputs.TargetOemEnvironment }}-preapproved
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+    timeout-minutes: 1440
+    continue-on-error: false
+    outputs:
+      JobId: ${{ github.job }}
+    steps:
 
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
         uses: actions/checkout@v4
@@ -148,7 +175,7 @@ jobs:
             playbooks/oracle_password_rotation
             playbooks/ansible.cfg
           path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
 
       - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
@@ -160,7 +187,7 @@ jobs:
             ansible/hosts
             ansible/group_vars
           path: inventory
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
 
       - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
@@ -172,7 +199,7 @@ jobs:
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-modernisation-platform-facts
           path: roles
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
 
       - name: Configure AWS Credentials
@@ -189,10 +216,94 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
           $command -i $inventory \
-          -e oem_target=${{ steps.prepareoemtargethost.outputs.TargetOemHost }} \
-          -e environment_name=${{ steps.prepareoemtargethost.outputs.TargetEnvironmentName }}  \
-          -e target_environment_name=${{steps.prepareoemtargethost.outputs.TargetEnvironmentName }} \
-          -e sync_monitoring_passwords=${{ steps.prepareoemtargethost.outputs.SyncMonitoringPasswords }} \
-          -e rotate_rman_password=${{ steps.prepareoemtargethost.outputs.RotateRMANPassword }} \
-          -e rotate_oem_passwords=${{ steps.prepareoemtargethost.outputs.RotateOEMPasswords }} ${{ steps.prepareoemtargethost.outputs.VerboseOutput }}
+          -e oem_target=${{ needs.oracle-oem-password-preparation.outputs.TargetOemHost }} \
+          -e environment_name=${{ needs.oracle-oem-password-preparation.outputs.TargetEnvironmentName }}  \
+          -e target_environment_name=${{ needs.oracle-oem-password-preparation.outputs.TargetEnvironmentName }} \
+          -e sync_monitoring_passwords=${{ needs.oracle-oem-password-preparation.outputs.SyncMonitoringPasswords }} \
+          -e rotate_rman_password=${{ needs.oracle-oem-password-preparation.outputs.RotateRMANPassword }} \
+          -e rotate_oem_passwords=${{ needs.oracle-oem-password-preparation.outputs.RotateOEMPasswords }} ${{ needs.oracle-oem-password-preparation.outputs.VerboseOutput }}
+
+  slack-notification:
+    if: ${{ failure() }}
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+    needs: [oracle-oem-password-preparation,oracle-oem-password-rotation]
+    environment: ${{ needs.oracle-oem-password-preparation.outputs.TargetOemEnvironment }}-preapproved
+    env:
+      TargetOemEnvironment: ${{ needs.oracle-oem-password-preparation.outputs.TargetOemEnvironment }}
+    steps:
+
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
+      - name: Get Slack Token
+        id: get-slack-token
+        shell: bash
+        run: |
+          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+          OEM_ACCOUNT_ID=$(aws ssm get-parameter --name account_ids --region eu-west-2 --with-decryption  --output json | \
+                jq '.Parameter.Value' | tr -d '\' | sed 's/^\"//' | sed 's/\"$//' | \
+                jq -r 'to_entries | map(select(.key | contains("hmpps-oem-"))) | first' | jq -r '.value' )
+          SECRET_ARN="arn:aws:secretsmanager:eu-west-2:${OEM_ACCOUNT_ID}:secret:/oracle/database/EMREP/shared-passwords"
+          SECRET_VALUE=$(aws secretsmanager get-secret-value --secret-id "${SECRET_ARN}" --query SecretString --output json)
+          SLACK_TOKEN=$(echo ${SECRET_VALUE} | jq -r | jq -r 'to_entries[] | select(.key=="slack_token").value')
+          echo "slack_token=${SLACK_TOKEN}" >> $GITHUB_OUTPUT
+
+          if [[ "${{ needs.oracle-oem-password-preparation.result }}" == "failure" ]]
+          then
+            echo "jobid=${{ needs.oracle-oem-password-preparation.outputs.JobId }}" >> $GITHUB_OUTPUT
+          elif [[ "${{ needs.oracle-oem-password-rotation.result }}" == "failure" ]]
+          then
+            echo "jobid=${{ needs.oracle-oem-password-rotation.outputs.JobId }}" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Slack Failure Notification
+        id: slack
+        uses: slackapi/slack-github-action@v1.26.0
+        with:
+            channel-id: ${{ needs.oracle-oem-password-preparation.outputs.SlackChannel }}
+            payload: |
+              { 
+                "icon_emoji":"large_purple_circle",
+                "text":"Failed OEM Password Rotation",
+                "blocks":[
+                  {
+                    "type": "section",
+                    "text": 
+                    {
+                      "type": "mrkdwn",
+                      "text": "Failed OEM Password Rotation:"}
+                    },
+                    {
+                      "type": "section",
+                      "fields":[
+                          {
+                            "type": "mrkdwn",
+                            "text": "*Workflow:*\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }}>"
+                          },
+                          {
+                            "type": "mrkdwn",
+                            "text": "*Job:*\n${{ steps.get-slack-token.outputs.jobid }}"
+                          },
+                          {
+                            "type": "mrkdwn",
+                            "text": "*Repo:*\n${{ github.repository }}"
+                          },
+                          {
+                            "type": "mrkdwn",
+                            "text": "*OEM Environment:*\n${{ env.TargetOemEnvironment }}"
+                          }
+                        ]
+                    }  
+                  ]
+                }
+        env:
+          SLACK_BOT_TOKEN: ${{ steps.get-slack-token.outputs.slack_token }}
+
           
